# kairos

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  install.ps1  install.sh  pyproject.toml
.github/actions/setup-kairos/: action.yml
.github/workflows/: ci.yml  release.yml
docs/: MCP.md  UPGRADING.md  architecture.md  brand.md
docs/decisions/: 0001-tech-stack.md  0002-data-model.md  0003-strategic-considerations.md
docs/launch/: linkedin.md  v0.2.1.md  v0.2.md
research/: competitors.md  jcode_teardown.md  preflight.md  wedge.md
scripts/: record-demo.sh
scripts/e2e/: 01_init.sh  02_ingest.sh  03_query.sh  04_lint.sh  05_run.sh  run-all.ps1  run-all.sh
src/kairos/: __init__.py  cli.py  selector.py
src/kairos/_seed/: AGENTS.md
src/kairos/_seed/concepts/: chain-of-thought.md  constitutional-ai.md  embedding-search.md  few-shot-prompting.md  function-calling.md  hybrid-search.md  hyde.md  llm-wiki.md  memory-buffer.md  plan-and-execute.md  prompt-injection.md  rag.md  react.md  reflexion.md  rerank.md  router-agent.md  self-consistency.md  self-refine.md  tool-use.md  tree-of-thoughts.md  zero-shot-prompting.md
src/kairos/llm/: __init__.py  mcp_client.py
src/kairos/llm/providers/: __init__.py  _http.py  anthropic.py  base.py  ollama.py  openai.py  openai_compat.py  stub.py
src/kairos/mcp/: __init__.py  server.py
src/kairos/memory/: __init__.py  db.py  schema.sql  wiki_index.py
src/kairos/runners/: __init__.py  base.py  rag.py  react.py  reflexion.py
src/kairos/utils/: __init__.py  config.py  paths.py
src/kairos/wiki/: __init__.py  ingest.py  init.py  lint.py  query.py  schema.py
tests/: conftest.py
tests/integration/: __init__.py  test_concurrent_runs.py  test_mcp_client_http.py  test_mcp_server.py  test_ollama_live.py
tests/regression/v2/: __init__.py  matrix.py  test_v2_closure_matrix.py  v2_verification.py
tests/unit/: test_cli_mcp_subcommand.py  test_cli_v02.py  test_config.py  test_db.py  test_ingest.py  test_ingest_v02.py  test_init.py  test_init_v02.py  test_lint.py  test_llm_providers.py  test_mcp_client.py  test_query.py  test_release_pipeline_v3.py  test_runner_abc.py  test_runners.py  test_schema.py  test_schema_yaml.py  test_selector.py  test_selector_telemetry.py  test_v02_misc.py  test_wiki_index.py
