[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kairos-agent"
version = "0.4.0"
description = "Stop guessing. Run the right pattern. A CLI for executable agent knowledge."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "vinothhacks", email = "vinoth.nagarajan@solverminds.com" },
]
keywords = ["llm", "agent", "wiki", "karpathy", "mcp", "rag", "react", "reflexion", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "pydantic>=2.7,<3.0",
  "httpx>=0.27,<1.0",
  "platformdirs>=4.2,<5.0",
  "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0",
  "pytest-cov>=5.0,<7.0",
  "pip-audit>=2.7,<3.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
  "bandit>=1.9.4,<2.0",
  "mcp>=1.27.1,<2.0",
  "radon>=6.0.1",
]
mcp-server = [
    "mcp>=1.27.1,<2.0",
]

[project.scripts]
kairos = "kairos.cli:app"

[project.urls]
Homepage = "https://github.com/vinothhacks/kairos"
Repository = "https://github.com/vinothhacks/kairos"
Issues = "https://github.com/vinothhacks/kairos/issues"
Changelog = "https://github.com/vinothhacks/kairos/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/kairos"]

[tool.hatch.build.targets.sdist]
include = [
  "src/kairos",
  "AGENTS.md",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C90"]
ignore = ["E501", "B008"]  # B008: typer uses func calls in arg defaults by design

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/kairos", "tests"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "live: marks live tests that hit a real local or remote provider (deselect with '-m \"not live\"')",
  "integration: marks integration tests that opt out of the stub LLM autouse fixture",
]

[dependency-groups]
dev = [
    "mcp>=1.27.1,<2.0",
    "radon>=6.0.1",
]

